# opengl_experiemnts

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: EBO.hpp  VAO.hpp  VBO.hpp  shaderClass.hpp  textureClass.hpp  utils.hpp
libraries/include/glad/: glad.h
libraries/src/glad/: glad.c
resources/shaders/: default.frag  default.vert
src/: EBO.cpp  VAO.cpp  VBO.cpp  main.cpp  shaderClass.cpp  textureClass.cpp  utils.cpp
